# CommonLibSF

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  EXCEPTIONS  LICENSE  README.md  build-clang-cl.bat  build-msvc.bat  generate-sln.ps1  make-sln-clang-cl.bat  make-sln-msvc.bat  vcpkg.json  xmake-extra.lua  xmake.lua
CommonLibSF/: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.py  vcpkg.json  xmake-extra.lua  xmake.lua
CommonLibSF/LICENSES/: COMMONLIB
CommonLibSF/cmake/: CommonLibSF.cmake  build_stl_modules.props  config.cmake.in  make-directives.ps1  make-sourcelist.ps1
CommonLibSF/include/RE/: IDs.h  IDs_RTTI.h  Offsets.h  Offsets_NiRTTI.h  Offsets_RTTI.h  Offsets_VTABLE.h  RTTI.h  Starfield.h
CommonLibSF/include/RE/A/: AIProcess.h  AVMData.h  Actor.h  ActorEquipManager.h  ActorPackage.h  ActorState.h  ActorValueInfo.h  ActorValueOwner.h  ActorValueStorage.h  ActorValues.h  AlchemyItem.h  Array.h  ArrowProjectile.h
CommonLibSF/include/RE/B/: BGSAcousticSpace.h  BGSAction.h  BGSAddonNode.h  BGSAimAssistModel.h  BGSAimAssistPoseData.h  BGSAimModel.h  BGSAmbienceSet.h  BGSArtObject.h  BGSAttachParentArray.h  BGSAttackDataForm.h  BGSAudioOcclusionPrimitive.h  BGSBaseForm.h  BGSBendableSpline.h  BGSBiomeMarkerObject.h  BGSBipedObjectForm.h  BGSBlockBashData.h  BGSBodyPartData.h  BGSBodyPartInfo.h  BGSCameraPath.h  BGSCameraShot.h  BGSCloudForm.h  BGSCraftingResourceOwner.h  BGSCraftingUseSound.h  BGSCurve3DForm.h  BGSCurveForm.h  BGSDamageType.h  BGSDefaultObject.h  BGSDestructibleObjectForm.h  BGSDirectionalAmbientLightingColors.h  BGSEditorID.h  BGSEffectSequenceForm.h  BGSEntryPoint.h  BGSEquipIndex.h  BGSEquipSlot.h  BGSEquipType.h  BGSExplosion.h  BGSFeaturedItemMessage.h  BGSFogVolumeForm.h  BGSFootstep.h  BGSFootstepSet.h  (+113 more)
CommonLibSF/include/RE/C/: CodeTasklet.h  Color.h  CombatGroup.h  CompiledScriptLoader.h  ConeProjectile.h  Console.h  ConsoleLog.h
CommonLibSF/include/RE/D/: DebuggerMessages.h  DecalData.h
CommonLibSF/include/RE/E/: EffectArchetypes.h  EffectItem.h  EffectSetting.h  EmitterProjectile.h  EnchantmentItem.h  ErrorLogger.h  ExtraDataList.h  ExtraDataTypes.h  ExtraLock.h
CommonLibSF/include/RE/F/: FORM_ENUM_STRING.h  FlameProjectile.h  FormTypes.h
CommonLibSF/include/RE/G/: GameMenuBase.h  GameVM.h  GrenadeProjectile.h
CommonLibSF/include/RE/H/: HandlePolicy.h  HandleReaderWriter.h  Hazard.h
CommonLibSF/include/RE/I/: IAddressControllerStore.h  IAnimationGraphManagerHolder.h  ICachedErrorMessage.h  IClientVM.h  IComplexType.h  IFuncCallQuery.h  IFunction.h  IKeywordFormBase.h  ILoader.h  IMemoryPagePolicy.h  IMenu.h  IMovementInterface.h  IMovementPlayerControlsFilter.h  IMovementState.h  IMovementStateStore.h  INIPrefSettingCollection.h  INISettingCollection.h  IObject.h  IObjectHandlePolicy.h  IPostAnimationChannelUpdateFunctor.h  IRemoteDebugger.h  ISavePatcherInterface.h  IStore.h  IStoreAnimationActions.h  IType.h  IVMDebugInterface.h  IVMFunctionMessageDispatch.h  IVMObjectBindInterface.h  IVMRemoteDebuggerInterface.h  IVMSaveLoadInterface.h  IVirtualMachine.h  InteriorData.h  idLogging.h  idTCP.h
CommonLibSF/include/RE/L/: LinkerProcessor.h  Location.h  Logger.h
CommonLibSF/include/RE/M/: MagicItem.h  MagicSystem.h  Main.h  MemoryManager.h  MenuOpenCloseEvent.h  Misc.h  MissileProjectile.h  msvc.h
CommonLibSF/include/RE/N/: NativeFunction.h  NativeFunctionBase.h  NiAVObject.h  NiBound.h  NiCamera.h  NiColor.h  NiMatrix3.h  NiPoint3.h  NiPoint4.h  NiQuaternion.h  NiSmartPointer.h  NiTransform.h
CommonLibSF/include/RE/O/: Object.h  ObjectBindPolicy.h  ObjectTypeInfo.h
CommonLibSF/include/RE/P/: PlasmaProjectile.h  PlayerCamera.h  PlayerCharacter.h  Projectile.h  PropertyGroupInfo.h  PropertyTypeInfo.h
CommonLibSF/include/RE/R/: RawFuncCallQuery.h  RegSettingCollection.h  RemoteDebugger.h
CommonLibSF/include/RE/S/: SWFToCodeFunctionHandler.h  SavePatcher.h  ScaleformGFxASMovieRootBase.h  ScaleformGFxFunctionHandler.h  ScaleformGFxMovie.h  ScaleformGFxState.h  ScaleformGFxStateBag.h  ScaleformGFxValue.h  ScaleformMemoryHeap.h  ScaleformPtr.h  ScaleformRefCount.h  Script.h  Setting.h  SettingCollection.h  SettingCollectionList.h  SettingCollectionMap.h  Settings.h  SimpleAllocMemoryPagePolicy.h  SpellItem.h  Stack.h  StackFrame.h  Store.h  Struct.h  StructTypeInfo.h  SuspendedStack.h
CommonLibSF/include/RE/T/: TBO_InstanceData.h  TESAIForm.h  TESActorBase.h  TESActorBaseData.h  TESAmmo.h  TESBoundAnimObject.h  TESBoundObject.h  TESCamera.h  TESCellFullyLoadedEvent.h  TESClass.h  TESContainer.h  TESContainerChangedEvent.h  TESDataHandler.h  TESDeathEvent.h  TESDescription.h  TESEffectShader.h  TESEnchantableForm.h  TESEyes.h  TESFile.h  TESFlora.h  TESForm.h  TESFormRefCount.h  TESFullName.h  TESFurniture.h  TESGlobal.h  TESGrass.h  TESHandleForm.h  TESIdleForm.h  TESImageSpace.h  TESImageSpaceModifiableForm.h  TESKey.h  TESLandTexture.h  TESLevCharacter.h  TESLevItem.h  TESLevSpell.h  TESLeveledList.h  TESNPC.h  TESObject.h  TESObjectACTI.h  TESObjectANIO.h  (+25 more)
CommonLibSF/include/RE/U/: UI.h  UIMessageQueue.h
CommonLibSF/include/RE/V/: Variable.h  VirtualMachine.h
CommonLibSF/include/RE/W/: WwiseSoundHook.h
CommonLibSF/include/REL/: ID.h  Module.h  Offset.h  Pattern.h  REL.h  Relocation.h  Version.h
CommonLibSF/include/SFSE/: API.h  IAT.h  InputMap.h  Interfaces.h  Logger.h  SFSE.h  Trampoline.h  Utilities.h  Version.h
CommonLibSF/include/SFSE/Impl/: DInputAPI.h  PCH.h  Stubs.h  WinAPI.h  XInputAPI.h
CommonLibSF/src/RE/A/: AIProcess.cpp  Actor.cpp  ActorEquipManager.cpp  ActorPackage.cpp  ActorValueInfo.cpp  ActorValueOwner.cpp  ActorValues.cpp  Array.cpp
CommonLibSF/src/RE/B/: BGSAttackDataForm.cpp  BGSDestructibleObjectForm.cpp  BGSForcedLocRefType.cpp  BGSKeyword.cpp  BGSKeywordForm.cpp  BGSListForm.cpp  BGSLocation.cpp  BGSMod.cpp  (+23 more)
CommonLibSF/src/REL/: ID.cpp  Module.cpp  Relocation.cpp  Version.cpp
CommonLibSF/src/SFSE/: API.cpp  IAT.cpp  InputMap.cpp  Interfaces.cpp  Logger.cpp  Trampoline.cpp
CommonLibSF/test/: test.cpp
(+585 files in other folders)
